# spatial-pinwheel

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  AUDIT_FIX58.md  AUDIT_FIX59.md  AUDIT_FIX60.md  AUDIT_FIX61.md  AUDIT_FIX62.md  AUDIT_FIX63.md  AUDIT_FIX64.md  AUDIT_FIX65.md  AUDIT_FIX66.md  AUDIT_FIX67.md  AUDIT_FIX68.md  AUDIT_FIX69.md  AUDIT_FIX70.md  AUDIT_FIX71.md  AUDIT_FIX72.md  AUDIT_FIX73.md  AUDIT_FIX74.md  AUDIT_FIX75.md  AUDIT_FIX76.md  AUDIT_FIX77.md  AUDIT_FIX78.md  AUDIT_FIX79.md  AUDIT_FIX80.md  AUDIT_FIX81.md  AUDIT_FIX82.md  AUDIT_FIX83.md  AUDIT_FIX84.md  AUDIT_FIX85.md  AUDIT_FIX86.md  AUDIT_FIX86V2.md  AUDIT_FIX87_FRONTEND_BACKEND.md  AUDIT_FIX88_FRONTEND_BACKEND.md  CHANGELOG.md  Dockerfile  LIVE_TRADER_CHECKLIST_FIX63.md  PATCH_README_FIX15.md  (+83 more)
backend/: .gitignore  alembic.ini  debug_api.py  entrypoint.sh  gen_protos.py  ml_model.pkl  pyproject.toml  time_stop_model.pkl  verify_tbank_grpc.py  verify_types.py
backend/apps/api/: Dockerfile  deps.py  main.py  middleware.py  status.py
backend/apps/backtest/: engine.py
backend/apps/worker/: Dockerfile  aggregator.py  correlation_map.py  main.py  market.py  processor.py  processor_support.py  publisher.py
backend/certs/: README.md
backend/core/: config.py  logging.py  metrics.py
backend/core/ai/: agent_clients.py  agent_contracts.py  agent_merge.py  challenger_shadow.py  state_builder.py  trader_shadow.py  workspace_builder.py
backend/core/events/: bus.py
backend/core/execution/: monitor.py  paper.py  tbank.py
backend/core/ml/: __init__.py  attribution.py  dataset.py  registry.py  runtime.py  time_stop.py  trainer.py
backend/core/models/: schemas.py
backend/core/notifications/: telegram.py
backend/core/risk/: correlation.py  economic.py  manager.py
backend/core/security/: crypto.py
backend/core/services/: adaptive_exit.py  business_metrics.py  capital_allocator.py  data_edge_runtime.py  degrade_policy.py  event_regime.py  excursion_tracker.py  exit_diagnostics.py  forensic_export.py  geometry_optimizer.py  live_validation.py  paper_audit.py  performance_governor.py  performance_layer.py  portfolio_optimizer.py  recalibration.py  runtime_tokens.py  settings_presets.py  signal_execution_uow.py  signal_freshness.py  signal_meta_compact.py  symbol_adaptive.py  symbol_adaptive_timeframes.py  timeframe_engine.py  trading_quality_audit.py  trading_schedule.py  ui_runtime.py  worker_status.py
backend/core/storage/: database.py  decision_log_utils.py  models.py  session.py
backend/core/strategy/: base.py  breakout.py  mean_reversion.py  multi.py  selector.py  vwap_bounce.py
backend/docs/: api_contract_v1.md
backend/infra/: .env.example  api_logs.txt  docker-compose.yml  prometheus.yml
backend/scripts/: calibrate_threshold.py  train_symbol_profiles.py  update_schema.py  verify_integration.py  verify_settings_integration.py
backend/tests/: manual_verification.py  run_tests_manual.py  test_adaptive_exit_manager.py  test_ai_agent_shadow.py  test_ai_context_improvements.py  test_ai_fast_path.py  test_api_main_heavy_reads.py  test_audit_fixes.py  test_backtest_walk_forward.py  test_candles_router.py  test_capital_allocator.py  test_data_edge_runtime.py  test_decision_engine.py  test_degrade_policy.py  test_degrade_policy_cache.py  test_degrade_policy_ui_safe.py  test_excursion_tracker.py  test_execution_ops_quality.py  test_execution_timeframe_policy.py  test_exit_diagnostics.py  test_fix22_regressions.py  test_fix23_decision_quality.py  test_fix26_economic_filters.py  test_http_client_proxy.py  test_indicators_property.py  test_integration.py  test_live_validation.py  test_ml_attribution.py  test_ml_dataset.py  test_ml_runtime.py  test_ml_trainer.py  test_monitor_feedback.py  test_p5_backtest.py  test_p5_correlation.py  test_p5_full.py  test_p5_indicators.py  test_p5_rules.py  test_p5_strategies.py  test_performance_governor.py  test_performance_layer.py  (+19 more)
(+201 files in other folders)
