[project]
name = "trading-bot-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.1",
  "psycopg[binary]>=3.1.19",
  "redis>=5.0.4",
  "orjson>=3.10.3",
  "python-dateutil>=2.9.0.post0",
  "grpcio>=1.62.0",
  "protobuf>=4.25.0",
  "grpcio-tools>=1.62.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["apps*", "core*"]
exclude = ["vendor*", "temp_investAPI*", "infra*", "tests*", "scripts*"]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
  "black>=24.4.2",
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "httpx>=0.27.0",
]

[tool.black]
line-length = 100
extend-exclude = "vendor"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["vendor/*", "*_pb2.py", "*_pb2_grpc.py", "*_pb2.pyi"]

[tool.mypy]
python_version = "3.10"
strict = false
